<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTitle"
            android:textSize="30sp"
            android:textColor="#ff0000"
            android:layout_marginTop="15dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/txtTaxableIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_below="@id/txtTitle"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="numberDecimal" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtTaxableIncome"
            android:layout_centerHorizontal="true">

            <RadioButton
                android:id="@+id/radChina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:checked="true"
                android:text="@string/radChina"
                android:textSize="20sp" />
            <RadioButton
                android:id="@+id/radGermany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radGermany"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_centerHorizontal="true" />

            <RadioButton
                android:id="@+id/radSweden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/radSweden"
                android:textSize="20sp" />
            <RadioButton
                android:id="@+id/radUsa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radUsa"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:checked="true"
                android:layout_marginLeft="10dp"
                android:layout_centerHorizontal="true" />
        </RadioGroup>

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCalculate"
            android:textSize="25sp"
            android:layout_margin="15dp"
            android:layout_below="@id/radioGroup"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#ff0000"
            android:layout_marginTop="25dp"
            android:layout_below="@id/btnCalculate"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>